[gd_scene load_steps=10 format=3 uid="uid://g51dmpmfy31c"]

[ext_resource type="Script" path="res://Scripts/NovelsScripts/novel_third_part.gd" id="1_5keda"]
[ext_resource type="Texture2D" uid="uid://byj8gdpy3vsul" path="res://Assets/Sprites/Cutscenes/Cutscene3/cut3 (1).png" id="1_6epgu"]
[ext_resource type="Texture2D" uid="uid://dtnqvjdgv7qo5" path="res://Assets/Sprites/Cutscenes/Cutscene3/cut3 (2).png" id="2_gikfd"]
[ext_resource type="Texture2D" uid="uid://yj3wget8nl6m" path="res://Assets/Sprites/Cutscenes/Cutscene3/cut3 (3).png" id="3_elsqw"]
[ext_resource type="Texture2D" uid="uid://h3fgqskeleoj" path="res://Assets/Sprites/Cutscenes/Cutscene3/cut3 (4).png" id="4_ist4x"]
[ext_resource type="Texture2D" uid="uid://cu5lansinnd28" path="res://Assets/Sprites/Cutscenes/Cutscene3/cut3 (5).png" id="5_bqsje"]
[ext_resource type="PackedScene" uid="uid://5om6k3kkmiml" path="res://NovelsScenes/character_scene.tscn" id="6_fsds6"]
[ext_resource type="PackedScene" uid="uid://wqhypp5m1lm5" path="res://NovelsScenes/dialogue_ui.tscn" id="7_6k1fn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_mffog"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_6epgu")
}, {
"duration": 1.0,
"texture": ExtResource("2_gikfd")
}, {
"duration": 1.0,
"texture": ExtResource("3_elsqw")
}, {
"duration": 1.0,
"texture": ExtResource("4_ist4x")
}, {
"duration": 1.0,
"texture": ExtResource("5_bqsje")
}],
"loop": true,
"name": &"BackgroundThird",
"speed": 7.0
}]

[node name="NovelThirdPart" type="Node2D"]
script = ExtResource("1_5keda")

[node name="BackgroundThird" type="CanvasLayer" parent="."]
layer = -1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="BackgroundThird"]
position = Vector2(509, 288)
sprite_frames = SubResource("SpriteFrames_mffog")
animation = &"BackgroundThird"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -2.0
offset_top = 14.0
offset_right = 38.0
offset_bottom = 54.0

[node name="CharacterScene" parent="Control" instance=ExtResource("6_fsds6")]
unique_name_in_owner = true
position = Vector2(-127, 121)

[node name="DialogueUI" parent="." instance=ExtResource("7_6k1fn")]
unique_name_in_owner = true
offset_left = 4.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = -6.0

[node name="Fade" type="CanvasLayer" parent="."]

[node name="FadeRect" type="ColorRect" parent="Fade"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
